secondfile/objects/Wireline_Promotion_Rules__c.object
<CustomObject>
    <description>Master Promotions object to store all the promotions created so that Promotion Engine can consume them part of execution.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Promos are only active when tested and certified. Certified Promos will be made Active/Deactive by the system on Start/End Date(s).</description>
        <inlineHelpText>Promos are only active when tested and certified. Certified Promos will be made Active/Deactive by the system on Start/End Date(s).</inlineHelpText>
        <label>Promotion Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Criteria_Field_Name__c</fullName>
        <inlineHelpText>Field Name of Criteria on which the Bulk Promotion will be running.</inlineHelpText>
        <label>Bulk Criteria Field Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Zip Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Criteria_Field_Value__c</fullName>
        <inlineHelpText>Values of the Bulk Criteria Field to be used to determine promotion eligibility.</inlineHelpText>
        <label>Bulk Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bulk is required mode when values are more than 100 for single criteria. Example: Address with combination of fields is not supported in Bulk mode.</inlineHelpText>
        <label>Bulk Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configured_Fields_After__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Configured Fields After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configured_Fields_Before__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Configured Fields Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configured_Fields_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Configured Fields Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <inlineHelpText>Mandatory: Discount Percentage applicable for promotion. Enter up to 2 decimal places.</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Display_Promotion_End_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, promotion end date is displayed to SP users.</description>
        <inlineHelpText>When checked, promotion end date is displayed to SP users.</inlineHelpText>
        <label>Display Promotion End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This deactivates promotion regardless of other promotion parameters.</description>
        <inlineHelpText>This deactivates promotion regardless of other promotion parameters.</inlineHelpText>
        <label>Stop Promotion Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Stop_Date__c</fullName>
        <inlineHelpText>Optional: This stops an existing running Promotion on a scheduled end of the date.</inlineHelpText>
        <label>Early Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Mandatory: Last day on which promotion will be active in portal and APIs.</description>
        <inlineHelpText>Mandatory: Last day on which promotion will be active in portal and APIs.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check the status of the whether the promotion is expired.</description>
        <inlineHelpText>To check the status of the whether the promotion is expired.</inlineHelpText>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, SP users will receive notification of the promotion’s pending expiration in their portal dashboards.</description>
        <inlineHelpText>When checked, SP users will receive notification of the promotion’s pending expiration in their portal dashboards.</inlineHelpText>
        <label>Dashboard Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Inputs__c</fullName>
        <inlineHelpText>This will hold the key value pairs for each dynamic field configured for this promotion</inlineHelpText>
        <label>Field Inputs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_input_values_JSON__c</fullName>
        <label>Field input values JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_Testing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Promos will be applied to test accounts only. NOTE: All promotions must be tested and certified before activation.</description>
        <inlineHelpText>Promos will be applied to test accounts only. NOTE: All promotions must be tested and certified before activation.</inlineHelpText>
        <label>Test Accounts Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <description>Read-Only: Populated with Map/Site/Deal based on Promo Type selected</description>
        <inlineHelpText>Read-Only: Populated with Map/Site/Deal based on Promo Type selected</inlineHelpText>
        <label>Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Bulk_Criteria_Promo__c</fullName>
        <label>Import Bulk Criteria Promo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keys_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Keys Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Read-Only: Populated with 1/2/3/4/5/6/7/8/9 based on Promo Type selected</description>
        <inlineHelpText>Read-Only: Populated with 1/2/3/4/5/6/7/8/9 based on Promo Type selected</inlineHelpText>
        <label>Priority Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Read-Only: Populated with M1/M2/S1/S2/S3/S4/D1/D2/D3 based on Promo Type selected</description>
        <inlineHelpText>Read-Only: Populated with M1/M2/S1/S2/S3/S4/D1/D2/D3 based on Promo Type selected</inlineHelpText>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Certified_Date__c</fullName>
        <description>Promo Certified Date</description>
        <label>Promo Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Configurator_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dummy lookup relationship with Promo Meta Data Object</inlineHelpText>
        <label>Promo Configurator Lookup</label>
        <referenceTo>Wireline_Promo_Meta_Data__c</referenceTo>
        <relationshipLabel>Wireline Promotion Rules</relationshipLabel>
        <relationshipName>Wireline_Promotion_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Configured_Fields__c</fullName>
        <inlineHelpText>Comma separated API Names of the dynamic fields configured for the promotion</inlineHelpText>
        <label>Promo Configured Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Expiration_Date__c</fullName>
        <description>Promo Expiration Date</description>
        <label>Promo Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Stopped_Date__c</fullName>
        <description>Promo Stopped Date</description>
        <label>Promo Stopped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Type__c</fullName>
        <inlineHelpText>Type of Promotion</inlineHelpText>
        <label>Promotion Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Card Map</fullName>
                </value>
                <value>
                    <fullName>SP Tier-Term</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>One-Time Charge</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Deal Reg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Certified_By__c</fullName>
        <description>Name of user who approved the promotion</description>
        <inlineHelpText>Name of user who approved the promotion</inlineHelpText>
        <label>Promotion Certified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once tested, a promotion must be certified by checking this box. NOTE: This is required for promotion to become active.</description>
        <inlineHelpText>Once tested, a promotion must be certified by checking this box. NOTE: This is required for promotion to become active.</inlineHelpText>
        <label>Promotion Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <inlineHelpText>Mandatory: 20 Characters limit. Visible to all SP users in portal and APIs.</inlineHelpText>
        <label>Promotion Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, promotion name and discount percentage is displayed to SP users.</description>
        <inlineHelpText>When checked, promotion name and discount percentage is displayed to SP users.</inlineHelpText>
        <label>Display Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Tag__c</fullName>
        <inlineHelpText>Mandatory: 30 Character limit. Visible to all SP users on Config page load.</inlineHelpText>
        <label>Promotion Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>Mandatory: Order in which Promotions are applied within the selected Promo Type. Ranks of existing Promos will automatically adjust.</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <inlineHelpText>Mandatory: 1000 Characters limit. Visible to internal users only.</inlineHelpText>
        <label>Promotion Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_Fields_Json__c</fullName>
        <label>Select Fields for Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Fields__c</fullName>
        <label>Selected Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stackable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the promotion can be applied in combination with other promotions within the promo type.</description>
        <inlineHelpText>When checked, the promotion can be applied in combination with other promotions within the promo type.</inlineHelpText>
        <label>Stackable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Mandatory: Date on which promotion will become active in portal and APIs.</description>
        <inlineHelpText>Mandatory: Date on which promotion will become active in portal and APIs.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_SP__c</fullName>
        <inlineHelpText>Test SPs to which the promotion will be applied if For Testing flag is set to true</inlineHelpText>
        <label>Test SP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Wireline Promotion Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Promo_Type__c</columns>
        <columns>Rank__c</columns>
        <columns>Discount_Percentage__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Promotion_Certified__c</columns>
        <columns>Stackable__c</columns>
        <columns>Promotion_Notification__c</columns>
        <columns>Expiry_Notification__c</columns>
        <columns>For_Testing__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Promo_Type__c</columns>
        <columns>Rank__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Active__c</columns>
        <columns>Discount_Percentage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stackable__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Field_Inputs__c</columns>
        <columns>For_Testing__c</columns>
        <columns>Do_Not_Run__c</columns>
        <columns>Promotion_Notification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>Promo-{0000}</displayFormat>
        <label>Promotion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wireline Promotion Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Discount_should_be_between_0_and_100</fullName>
        <active>true</active>
        <description>Discount Percentage must be between 0 and 100</description>
        <errorConditionFormula>OR(ISBLANK(Discount_Percentage__c),
Discount_Percentage__c &lt;= 0.00,
Discount_Percentage__c &gt; 1.00)</errorConditionFormula>
        <errorDisplayField>Discount_Percentage__c</errorDisplayField>
        <errorMessage>Discount Percentage must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Display_Promotion_End_Date_Check_Access</fullName>
        <active>true</active>
        <description>Display Promotion End Date field cannot be checked when Display Promotion field is unchecked for Access Promo Type.</description>
        <errorConditionFormula>IF( AND(Promotion_Notification__c==false,Display_Promotion_End_Date__c== true, ISPICKVAL(Promo_Type__c, &apos;Access&apos;)), true, false)</errorConditionFormula>
        <errorDisplayField>Display_Promotion_End_Date__c</errorDisplayField>
        <errorMessage>Display Promotion End Date field cannot be checked when Display Promotion field is unchecked for Access Promo Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Display_Promotion_End_Date_Uncheck_Acces</fullName>
        <active>true</active>
        <description>Display Promotion End Date field cannot be unchecked when Display Promotion field is checked for Access Promo Type.</description>
        <errorConditionFormula>IF( AND(Promotion_Notification__c==true,Display_Promotion_End_Date__c== false, ISPICKVAL(Promo_Type__c, &apos;Access&apos;)), true, false)</errorConditionFormula>
        <errorDisplayField>Display_Promotion_End_Date__c</errorDisplayField>
        <errorMessage>Display Promotion End Date field cannot be unchecked when Display Promotion field is checked for Access Promo Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_Stop_Date_Validation</fullName>
        <active>true</active>
        <description>Early Stop Date Validation</description>
        <errorConditionFormula>ISCHANGED(Early_Stop_Date__c ) &amp;&amp; ((Early_Stop_Date__c &lt; Start_Date__c) || (Early_Stop_Date__c &gt;= End_Date__c) || (Early_Stop_Date__c &lt; TODAY()))</errorConditionFormula>
        <errorDisplayField>Early_Stop_Date__c</errorDisplayField>
        <errorMessage>Select any date greater than or equal to today which is between Start date and End Date of the promotion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_left_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(End_Date__c)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>false</active>
        <description>End Date should be greater than or equal to Start Date</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date should be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hierarchy_must_be_selected</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Hierarchy__c)</errorConditionFormula>
        <errorDisplayField>Hierarchy__c</errorDisplayField>
        <errorMessage>Select Promo Type to populate Hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_Number_must_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Priority_Number__c)</errorConditionFormula>
        <errorDisplayField>Priority_Number__c</errorDisplayField>
        <errorMessage>Select Promo Type to populate Priority Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_must_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Priority__c)</errorConditionFormula>
        <errorDisplayField>Priority__c</errorDisplayField>
        <errorMessage>Select Promo Type to populate Priority.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Certified</fullName>
        <active>true</active>
        <description>Promotions can only be active if promotion is certified</description>
        <errorConditionFormula>IF( AND(Promotion_Certified__c == false,Active__c == true) , true, false)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Promotions can only be active if Promotion Certified field is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Name_cannot_be_left_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Promotion_Name__c)</errorConditionFormula>
        <errorDisplayField>Promotion_Name__c</errorDisplayField>
        <errorMessage>Promotion Name cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Tag_Validation_for_Port_Promos</fullName>
        <active>true</active>
        <description>Please provide Promotion Tag information.</description>
        <errorConditionFormula>ISBLANK(Promotion_Tag__c) &amp;&amp; ((ISPICKVAL(Promo_Type__c,&apos;Port&apos;)) || (ISPICKVAL(Promo_Type__c,&apos;Access&apos;)))</errorConditionFormula>
        <errorDisplayField>Promotion_Tag__c</errorDisplayField>
        <errorMessage>Please provide Promotion Tag information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rank_cannot_be_left_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Rank__c)</errorConditionFormula>
        <errorDisplayField>Rank__c</errorDisplayField>
        <errorMessage>Rank cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_Description_cannot_be_left_blank</fullName>
        <active>true</active>
        <description>Rule Description cannot be left blank</description>
        <errorConditionFormula>ISBLANK(Rule_Description__c)</errorConditionFormula>
        <errorDisplayField>Rule_Description__c</errorDisplayField>
        <errorMessage>Rule Description cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_cannot_be_left_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_should_be_after_todays_date</fullName>
        <active>false</active>
        <description>Start Date should be after Today&apos;s date</description>
        <errorConditionFormula>AND(ISNEW(),Start_Date__c &lt; (Today() + 1))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date should be after Today&apos;s date</errorMessage>
    </validationRules>
</CustomObject>